Added link to github in footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
 	</div>
 	<div class="footer-copyright">
 		<div class="container">
-			<a class="grey-text text-lighten-4 right" href="https://github.com/HisashiQ">Find me on GitHub</a>
+			<a class="grey-text text-lighten-4 right" href="https://github.com/HisashiQ/RailsEarthquakeMapper">This project is on GitHub, find more info here.</a>
 		</div>
 	</div>
 </footer>
