changed home page text

--- a/app/views/earthquakes/index.html.erb
+++ b/app/views/earthquakes/index.html.erb
@@ -3,9 +3,9 @@
 <div class="container">
 <div class="row">
 	<div class="col s12">
-		<h5>Visualisation of yesterdays earthquakes and there magnitude</h5>
-		<p>The map displays data from the USGS (link in the footer) and uses Google Maps to plot the location and magnitude</p>
-		<p>Click the table icon in the top right hand corner to see more information about these earthquakes</p>
+		<h5>Visualisation Of All Earthquakes With Corresponding Magnitude In The Past 24 Hours</h5>
+		<p>The map below displays data from the USGS (link in the footer) and uses Google Maps to plot the location and magnitude</p>
+		<p>Click the table icon on the navigation bar to see more information about these earthquakes.</p>
 	</div>
 </div>
 
